--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>welcome</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, impedit?</p>
+    <label for="">email</label>
+    
 </body>
 </html>
